2010-08-30  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Only show taskbar buttons for windows
	which satisfy both:
	
	- style mask isn't NSBorderlessWindowMask
	- style mask don't have NSUtilityWindowMask set
	
	Should fix bug 30911

2010-08-29  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_activate.m: Call -[NSApp deactivate] in response
	to a WM_ACTIVEAPPP message reporting that the app lost focus.

	This delivers NSApplicationWillResignActiveNotification
	and NSApplicationDidResignActiveNotification, hides panels, etc.

2010-08-24  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Handle Page Down and Page Up keys,
  as well as adding a few others.

2010-08-24  Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/win32/WIN32Server.h:
	* Source/win32/WIN32Server.m:
	* Source/win32/w32_movesize.m:
	Fix a rather serious error where the extra window data was allocated
	in two places (allocated with objc_malloc in the WM_CREATE handler,
	and also allocated by Windows using the cbWndExtra field of the window
	class structure). Sometimes the window level was accessed from one
	memory area and sometimes from the other.
	
	This is a quick fix that leaves the level and ordered properties
	in the cbWndExtra area, and the rest is left in the WIN_INTERN
	structure. 

	This fixes the problem where window ordering was broken when running
	apps in gdb.

2010-08-24  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m (-setmaxsize::):
  Remove the maximize box when a maximum size is set on a window.

2010-08-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m,
	* Source/xlib/GSXftFontInfo.m: Also request spacing information.
	Patch by Derek Fawcus <dfawcus@employees.org>.

2010-08-03  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m:
	Only look at NSUtilityWindowMask to decide whether to use a thin-
	style title bar (WS_EX_TOOLWINDOW).
